sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:13: error: not found: value c
      setValeur(c, v)
                ^