sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var v = 0
    for (i <- 1 to getNombreValeurs()-1) {
      v = getValeur(i)
      for (k <- 1 to i-1) {
        var c = 0
        if (plusPetit(v, i-k)) {
          echange(i-k, i-k+1);
          c = i-k
        }
      }
      setValeur(c, v)
    }
}